@@ -1,4 +1,4 @@
-version = "2.2-pre1"
+version = "2.2-RC1"
 
 if __name__ == "__main__":
     print version
